# Head-First-Design-Patterns

./: .gitignore  CMakeLists.txt
Adapter/include/: Duck.h  Turkey.h  TurkeyAdapter.h  WildTurkey.h
Adapter/src/: DuckTestDrive.cpp  MallardDuck.cpp
CXX/: CMakeLists.txt  run_all.sh
CXX/Adapter/: CMakeLists.txt
CXX/Adapter/include/: MallardDuck.h
CXX/Adapter/src/: TurkeyAdapter.cpp  WildTurkey.cpp
CXX/Command/include/Command/: CeilingFanOffCommand.h  GarageDoorDownCommand.h  Light.h  LightOffCommand.h
CXX/Command/src/: HottubOnCommand.cpp  Light.cpp  RemoteControl.cpp  RemoteControlTest.cpp  RemoteLoader.cpp  Stereo.cpp  StereoOffCommand.cpp
CXX/Decorator/include/: Whip.h
CXX/Decorator/src/: Espresso.cpp  Mocha.cpp
CXX/Facade/: CMakeLists.txt
CXX/Facade/include/Facade/: CdPlayer.h  HomeTheaterFacade.h  Projector.h
CXX/Facade/src/: Amplifier.cpp  CdPlayer.cpp  HomeTheaterFacade.cpp  HomeTheaterTestDrive.cpp  PopcornPopper.cpp  Screen.cpp  TheaterLights.cpp
CXX/Factory/include/: CheesePizza.h  ClamPizza.h  PepperoniPizza.h  Pizza.h  PizzaStore.h  SimplePizzaFactory.h  VeggiePizza.h
CXX/Factory/src/: CheesePizza.cpp  ClamPizza.cpp  PepperoniPizza.cpp  Pizza.cpp  PizzaStore.cpp  PizzaTestDrive.cpp  SimplePizzaFactory.cpp  VeggiePizza.cpp
CXX/Observer/: CMakeLists.txt
CXX/Observer/include/: CurrentConditionsDisplay.h  DisplayElement.h  ForecastDisplay.h  HeatIndexDisplay.h  Measurement.h  Observer.h  StatisticsDisplay.h  Subject.h  WeatherData.h
CXX/Observer/src/: CurrentConditionsDisplay.cpp  ForecastDisplay.cpp  HeatIndexDisplay.cpp  StatisticsDisplay.cpp  WeatherData.cpp  WeatherStation.cpp
CXX/Singleton/: CMakeLists.txt
CXX/Singleton/src/: Singleton.cpp  SingletonClient.cpp
CXX/State/: CMakeLists.txt
CXX/State/include/: GumballMachine.h  HasQuarterState.h  NoQuarterState.h  SoldOutState.h  SoldState.h  State.h
CXX/State/src/: GumballMachine.cpp  GumballMachineTestDrive.cpp  HasQuarterState.cpp  NoQuarterState.cpp  SoldOutState.cpp  SoldState.cpp
CXX/Strategy/: CMakeLists.txt
CXX/Strategy/include/: FlyRocketPowered.h  MuteQuack.h  QuackBehaviour.h  Squeak.h
CXX/Strategy/src/: FlyNoWay.cpp  MallardDuck.cpp  MiniDuckSimulator.cpp  ModelDuck.cpp  RedheadDuck.cpp
CXX/TemplateMethod/: CMakeLists.txt
CXX/TemplateMethod/include/: CaffeineBeverage.h  Coffee.h  Tea.h
CXX/TemplateMethod/src/: BeverageTestDrive.cpp  CaffeineBeverage.cpp  Coffee.cpp  Tea.cpp
Command/: CMakeLists.txt
Command/include/Command/: CeilingFanOnCommand.h  Command.h  GarageDoor.h  Hottub.h  HottubOnCommand.h  LivingroomLightOnCommand.h  NoCommand.h  SimpleRemoteControl.h  Stereo.h  StereoOffCommand.h  StereoOnWithCDCommand.h
Command/src/: CeilingFanOffCommand.cpp  CeilingFanOnCommand.cpp  GarageDoorDownCommand.cpp  GarageDoorUpCommand.cpp  Hottub.cpp  LightOffCommand.cpp  LivingroomLightOffCommand.cpp  LivingroomLightOnCommand.cpp  NoCommand.cpp  RemoteControlTest.cpp  RemoteLoader.cpp  SimpleRemoteControl.cpp
Cpp/: CMakeLists.txt  README.md  run_all.sh
Cpp/Adapter/: CMakeLists.txt
Cpp/Adapter/src/: DuckTestDrive.cpp
Cpp/Command/: CMakeLists.txt
Cpp/Command/include/Command/: CeilingFan.h  Command.h  GarageDoorUpCommand.h  HottubOffCommand.h  LightOnCommand.h  LivingroomLightOffCommand.h  NoCommand.h  RemoteControl.h  TV.h  TVOffCommand.h  TVOnCommand.h
Cpp/Command/src/: CeilingFan.cpp  GarageDoor.cpp  HottubOffCommand.cpp  LightOnCommand.cpp  StereoOnWithCDCommand.cpp
Cpp/Decorator/: CMakeLists.txt
Cpp/Decorator/include/: Beverage.h  Espresso.h  Milk.h
Cpp/Decorator/src/: HouseBlend.cpp  StarbuzzCoffee.cpp  Whip.cpp
Cpp/Facade/: CMakeLists.txt
Cpp/Facade/include/Facade/: Amplifier.h  Screen.h  Tuner.h
Cpp/Factory/: CMakeLists.txt
Cpp/Factory/include/: PepperoniPizza.h
Cpp/Factory/src/: PepperoniPizza.cpp  PizzaStore.cpp  SimplePizzaFactory.cpp
Cpp/Observer/include/: DisplayElement.h
Cpp/Observer/src/: CurrentConditionsDisplay.cpp  ForecastDisplay.cpp  HeatIndexDisplay.cpp  WeatherData.cpp
Cpp/Singleton/: CMakeLists.txt
Cpp/Singleton/include/: Singleton.h
Cpp/Singleton/src/: SingletonClient.cpp
Cpp/State/: CMakeLists.txt
Cpp/State/include/: SoldOutState.h  SoldState.h
Cpp/State/src/: GumballMachine.cpp  GumballMachineTestDrive.cpp  SoldOutState.cpp
Cpp/Strategy/: CMakeLists.txt
Cpp/Strategy/include/: FlyNoWay.h  Quack.h  RedheadDuck.h  RubberDuck.h
Cpp/Strategy/src/: FlyRocketPowered.cpp  MuteQuack.cpp
Cpp/TemplateMethod/include/: Tea.h
Decorator/: CMakeLists.txt
Decorator/include/: CondimentDecorator.h  DarkRoast.h  Decaf.h  HouseBlend.h  Mocha.h  Soy.h
Decorator/src/: DarkRoast.cpp  Decaf.cpp  Milk.cpp  Soy.cpp  StarbuzzCoffee.cpp
Facade/include/Facade/: Amplifier.h  DvdPlayer.h  PopcornPopper.h  TheaterLights.h
Facade/src/: DvdPlayer.cpp  HomeTheaterTestDrive.cpp  Projector.cpp  Tuner.cpp
Factory/: CMakeLists.txt
Factory/include/: CheesePizza.h  ClamPizza.h  Pizza.h  PizzaStore.h  SimplePizzaFactory.h
Factory/src/: ClamPizza.cpp  Pizza.cpp  PizzaStore.cpp
Observer/: CMakeLists.txt
Observer/include/: ForecastDisplay.h  Observer.h  StatisticsDisplay.h  WeatherData.h
Singleton/src/: Singleton.cpp
State/include/: GumballMachine.h  HasQuarterState.h  NoQuarterState.h  State.h
State/src/: HasQuarterState.cpp  SoldState.cpp
Strategy/: CMakeLists.txt
Strategy/include/: DecoyDuck.h  Duck.h  FlyBehaviour.h  FlyWithWings.h  MallardDuck.h  ModelDuck.h
Strategy/src/: DecoyDuck.cpp  Duck.cpp  FlyWithWings.cpp  Quack.cpp  RubberDuck.cpp  Squeak.cpp
TemplateMethod/: CMakeLists.txt
TemplateMethod/include/: Coffee.h
TemplateMethod/src/: BeverageTestDrive.cpp  Coffee.cpp
